--- a/intersection-crashes.html
+++ b/intersection-crashes.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="cleartype" content="on">
 	
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<link rel="stylesheet" href="node_modules/leaflet-toolbar/dist/leaflet.toolbar.css" />
+	<link rel="stylesheet" href="css/leaflet.toolbar.css" />
 	<link rel="stylesheet" href="css/intersection-crashes.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
 	<!-- JS libraries -->
 	<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 	<script type="text/javascript" src="js/tile.stamen.js?v1.3.0"></script>
-	<script src="node_modules/leaflet-toolbar/dist/leaflet.toolbar.js"></script>
+	<script type="text/javascript" src="js/leaflet.toolbar.js"></script>
 	
 	<!-- data sources -->
 	<script src="json/fl-counties.geojson"></script>
